--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -801,6 +801,8 @@ table {
       position: absolute;
       left: 50%;
       bottom: 3%; }
+    .section.start .container a.arrow:hover {
+      opacity: 0.5; }
 
 .section.business .container .text-block {
   padding-top: 100px;
@@ -919,13 +921,14 @@ table {
         line-height: 21px; }
 
 .section.main_car_animation {
-  background-color: #96E5EA;
+  background-color: #97e5ec;
   min-height: 100vh;
   min-width: 100%; }
   .section.main_car_animation .container {
     text-align: left; }
     .section.main_car_animation .container .text-block-program {
-      padding-top: 60px;
+      top: 60px;
+      left: 0;
       opacity: 0.7;
       color: black;
       font-family: "f_helvetica", "Helvetica", sans-serif;
@@ -933,7 +936,29 @@ table {
       font-size: 35.1px;
       line-height: 50.71px;
       text-transform: uppercase;
-      width: 300px; }
+      width: 300px;
+      position: absolute; }
+    .section.main_car_animation .container .block-info-1 {
+      position: absolute;
+      top: 100px;
+      right: 200px;
+      width: 400px;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 26px; }
+      .section.main_car_animation .container .block-info-1 .info-1-1 .button {
+        display: inline-block;
+        margin-right: 10px;
+        padding: 15px 30px;
+        border: 2px solid #3aa8b3;
+        border-radius: 100px;
+        cursor: pointer; }
+      .section.main_car_animation .container .block-info-1 .info-1-1 .button:last-child {
+        margin-right: 0; }
+      .section.main_car_animation .container .block-info-1 .info-1-1 .button:hover {
+        color: white;
+        background-color: #3aa8b3; }
 
 .section.business .container .text-block {
   padding-top: 100px;
@@ -1026,13 +1051,14 @@ table {
         line-height: 21px; }
 
 .section.main_car_animation {
-  background-color: #96E5EA;
+  background-color: #97e5ec;
   min-height: 100vh;
   min-width: 100%; }
   .section.main_car_animation .container {
     text-align: left; }
     .section.main_car_animation .container .text-block-program {
-      padding-top: 60px;
+      top: 60px;
+      left: 0;
       opacity: 0.7;
       color: black;
       font-family: "f_helvetica", "Helvetica", sans-serif;
@@ -1040,7 +1066,29 @@ table {
       font-size: 35.1px;
       line-height: 50.71px;
       text-transform: uppercase;
-      width: 300px; }
+      width: 300px;
+      position: absolute; }
+    .section.main_car_animation .container .block-info-1 {
+      position: absolute;
+      top: 100px;
+      right: 200px;
+      width: 400px;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 26px; }
+      .section.main_car_animation .container .block-info-1 .info-1-1 .button {
+        display: inline-block;
+        margin-right: 10px;
+        padding: 15px 30px;
+        border: 2px solid #3aa8b3;
+        border-radius: 100px;
+        cursor: pointer; }
+      .section.main_car_animation .container .block-info-1 .info-1-1 .button:last-child {
+        margin-right: 0; }
+      .section.main_car_animation .container .block-info-1 .info-1-1 .button:hover {
+        color: white;
+        background-color: #3aa8b3; }
 
 .section.new_level {
   background-color: #EEF3ED; }
@@ -1099,6 +1147,8 @@ table {
       position: absolute;
       left: 50%;
       bottom: 3%; }
+    .section.start .container a.arrow:hover {
+      opacity: 0.5; }
 
 
 /*# sourceMappingURL=app.css.map*/
