--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -800,6 +800,8 @@ table {
     .section.start .container a.arrow {
       position: absolute;
       left: 50%;
+      -webkit-transform: translateX(-50%);
+              transform: translateX(-50%);
       bottom: 3%; }
     .section.start .container a.arrow:hover {
       opacity: 0.5; }
@@ -925,8 +927,9 @@ table {
   min-height: 100vh;
   min-width: 100%; }
   .section.main_car_animation .container {
-    text-align: left; }
-    .section.main_car_animation .container .text-block-program {
+    text-align: left;
+    height: 100vh; }
+    .section.main_car_animation .container .block-program {
       top: 60px;
       left: 0;
       opacity: 0.7;
@@ -938,27 +941,61 @@ table {
       text-transform: uppercase;
       width: 300px;
       position: absolute; }
-    .section.main_car_animation .container .block-info-1 {
+    .section.main_car_animation .container .block-top {
       position: absolute;
       top: 100px;
-      right: 200px;
+      left: 50%;
       width: 400px;
       font-family: "f_helvetica", "Helvetica", sans-serif;
       font-weight: 300;
       font-size: 16px;
       line-height: 26px; }
-      .section.main_car_animation .container .block-info-1 .info-1-1 .button {
+      .section.main_car_animation .container .block-top .top-1 .button {
         display: inline-block;
         margin-right: 10px;
         padding: 15px 30px;
         border: 2px solid #3aa8b3;
         border-radius: 100px;
         cursor: pointer; }
-      .section.main_car_animation .container .block-info-1 .info-1-1 .button:last-child {
+      .section.main_car_animation .container .block-top .top-1 .button:last-child {
         margin-right: 0; }
-      .section.main_car_animation .container .block-info-1 .info-1-1 .button:hover {
+      .section.main_car_animation .container .block-top .top-1 .button:hover {
         color: white;
         background-color: #3aa8b3; }
+    .section.main_car_animation .container .content {
+      position: relative;
+      width: 630px;
+      height: 300px;
+      top: 60%;
+      left: 50%;
+      -webkit-transform: translateX(-50%) translateY(-50%);
+              transform: translateX(-50%) translateY(-50%); }
+      .section.main_car_animation .container .content .cleaner {
+        position: absolute;
+        bottom: 35px;
+        right: 75px;
+        width: 140px;
+        height: 300px;
+        background-image: url("../pics/section.main_car_animation.cleaner.png");
+        background-repeat: no-repeat; }
+      .section.main_car_animation .container .content .car {
+        position: absolute;
+        bottom: 0;
+        width: 630px;
+        height: 210px;
+        background-image: url("../pics/section.main_car_animation.car.png");
+        background-repeat: no-repeat; }
+    .section.main_car_animation .container .block-bottom {
+      position: absolute;
+      bottom: 100px;
+      left: 50%;
+      width: 550px; }
+      .section.main_car_animation .container .block-bottom .text {
+        font-family: "f_helvetica", "Helvetica", sans-serif;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 21px;
+        opacity: 0.4; }
 
 .section.business .container .text-block {
   padding-top: 100px;
@@ -1055,8 +1092,9 @@ table {
   min-height: 100vh;
   min-width: 100%; }
   .section.main_car_animation .container {
-    text-align: left; }
-    .section.main_car_animation .container .text-block-program {
+    text-align: left;
+    height: 100vh; }
+    .section.main_car_animation .container .block-program {
       top: 60px;
       left: 0;
       opacity: 0.7;
@@ -1068,27 +1106,61 @@ table {
       text-transform: uppercase;
       width: 300px;
       position: absolute; }
-    .section.main_car_animation .container .block-info-1 {
+    .section.main_car_animation .container .block-top {
       position: absolute;
       top: 100px;
-      right: 200px;
+      left: 50%;
       width: 400px;
       font-family: "f_helvetica", "Helvetica", sans-serif;
       font-weight: 300;
       font-size: 16px;
       line-height: 26px; }
-      .section.main_car_animation .container .block-info-1 .info-1-1 .button {
+      .section.main_car_animation .container .block-top .top-1 .button {
         display: inline-block;
         margin-right: 10px;
         padding: 15px 30px;
         border: 2px solid #3aa8b3;
         border-radius: 100px;
         cursor: pointer; }
-      .section.main_car_animation .container .block-info-1 .info-1-1 .button:last-child {
+      .section.main_car_animation .container .block-top .top-1 .button:last-child {
         margin-right: 0; }
-      .section.main_car_animation .container .block-info-1 .info-1-1 .button:hover {
+      .section.main_car_animation .container .block-top .top-1 .button:hover {
         color: white;
         background-color: #3aa8b3; }
+    .section.main_car_animation .container .content {
+      position: relative;
+      width: 630px;
+      height: 300px;
+      top: 60%;
+      left: 50%;
+      -webkit-transform: translateX(-50%) translateY(-50%);
+              transform: translateX(-50%) translateY(-50%); }
+      .section.main_car_animation .container .content .cleaner {
+        position: absolute;
+        bottom: 35px;
+        right: 75px;
+        width: 140px;
+        height: 300px;
+        background-image: url("../pics/section.main_car_animation.cleaner.png");
+        background-repeat: no-repeat; }
+      .section.main_car_animation .container .content .car {
+        position: absolute;
+        bottom: 0;
+        width: 630px;
+        height: 210px;
+        background-image: url("../pics/section.main_car_animation.car.png");
+        background-repeat: no-repeat; }
+    .section.main_car_animation .container .block-bottom {
+      position: absolute;
+      bottom: 100px;
+      left: 50%;
+      width: 550px; }
+      .section.main_car_animation .container .block-bottom .text {
+        font-family: "f_helvetica", "Helvetica", sans-serif;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 21px;
+        opacity: 0.4; }
 
 .section.new_level {
   background-color: #EEF3ED; }
@@ -1146,6 +1218,8 @@ table {
     .section.start .container a.arrow {
       position: absolute;
       left: 50%;
+      -webkit-transform: translateX(-50%);
+              transform: translateX(-50%);
       bottom: 3%; }
     .section.start .container a.arrow:hover {
       opacity: 0.5; }
