--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -944,7 +944,7 @@ table {
     .section.main_car_animation .container .block-top {
       position: absolute;
       top: 100px;
-      left: 50%;
+      left: 45%;
       width: 400px;
       font-family: "f_helvetica", "Helvetica", sans-serif;
       font-weight: 300;
@@ -985,13 +985,34 @@ table {
         height: 210px;
         background-image: url("../pics/section.main_car_animation.car.png");
         background-repeat: no-repeat; }
+    .section.main_car_animation .container .caption {
+      position: absolute;
+      top: 50%;
+      left: -25%;
+      color: white;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      font-weight: 600;
+      font-size: 150px;
+      text-transform: uppercase;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%); }
     .section.main_car_animation .container .block-bottom {
       position: absolute;
-      bottom: 100px;
-      left: 50%;
-      width: 550px; }
+      bottom: 5%;
+      left: 45%;
+      width: 550px;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      padding-top: 70px;
+      background-image: url("../pics/section.main_car_animation.bottom.1.svg");
+      background-repeat: no-repeat;
+      background-position: 2px 0; }
+      .section.main_car_animation .container .block-bottom .title {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        opacity: 0.7;
+        margin-bottom: 10px; }
       .section.main_car_animation .container .block-bottom .text {
-        font-family: "f_helvetica", "Helvetica", sans-serif;
         font-weight: 300;
         font-size: 14px;
         line-height: 21px;
@@ -1109,7 +1130,7 @@ table {
     .section.main_car_animation .container .block-top {
       position: absolute;
       top: 100px;
-      left: 50%;
+      left: 45%;
       width: 400px;
       font-family: "f_helvetica", "Helvetica", sans-serif;
       font-weight: 300;
@@ -1150,13 +1171,34 @@ table {
         height: 210px;
         background-image: url("../pics/section.main_car_animation.car.png");
         background-repeat: no-repeat; }
+    .section.main_car_animation .container .caption {
+      position: absolute;
+      top: 50%;
+      left: -25%;
+      color: white;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      font-weight: 600;
+      font-size: 150px;
+      text-transform: uppercase;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%); }
     .section.main_car_animation .container .block-bottom {
       position: absolute;
-      bottom: 100px;
-      left: 50%;
-      width: 550px; }
+      bottom: 5%;
+      left: 45%;
+      width: 550px;
+      font-family: "f_helvetica", "Helvetica", sans-serif;
+      padding-top: 70px;
+      background-image: url("../pics/section.main_car_animation.bottom.1.svg");
+      background-repeat: no-repeat;
+      background-position: 2px 0; }
+      .section.main_car_animation .container .block-bottom .title {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        opacity: 0.7;
+        margin-bottom: 10px; }
       .section.main_car_animation .container .block-bottom .text {
-        font-family: "f_helvetica", "Helvetica", sans-serif;
         font-weight: 300;
         font-size: 14px;
         line-height: 21px;
