--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -797,7 +797,7 @@ p {
     .section.start .container .logo {
       position: absolute;
       top: 3%;
-      left: 6%; }
+      left: 4%; }
     .section.start .container .lang {
       position: absolute;
       top: 3%;
@@ -1109,41 +1109,44 @@ p {
   min-height: 100vh;
   width: 100%; }
   .section.pults .container {
-    height: 100vh;
-    width: 100%;
-    padding-top: 5%;
-    color: white;
-    text-align: left; }
-    .section.pults .container .block.main {
-      width: 690px;
-      font-family: "f_helvetica", "Helvetica", sans-serif;
-      font-weight: 300; }
-      .section.pults .container .block.main .main-1 {
-        opacity: 0.9;
-        text-transform: uppercase;
-        font-size: 35.1px;
-        line-height: 50.71px; }
-      .section.pults .container .block.main .main-2 {
-        color: #b9d3f5;
-        opacity: 0.8;
-        font-size: 16px;
-        line-height: 26px;
-        margin-top: 20px; }
-    .section.pults .container .block.parts {
-      margin-left: 5%;
-      margin-top: 4%;
-      font-family: "f_helvetica", "Helvetica", sans-serif;
-      font-size: 16px;
-      line-height: 30px; }
-      .section.pults .container .block.parts td {
-        padding: 10px; }
-        .section.pults .container .block.parts td .caption {
-          color: #52b7f7;
-          font-weight: 600; }
-        .section.pults .container .block.parts td p {
-          opacity: 0.6;
+    display: table;
+    height: 100vh; }
+    .section.pults .container .blocks {
+      display: table-cell;
+      vertical-align: middle; }
+      .section.pults .container .blocks .block {
+        color: white;
+        text-align: left; }
+      .section.pults .container .blocks .block.main {
+        width: 700px;
+        font-family: "f_helvetica", "Helvetica", sans-serif;
+        font-weight: 300; }
+        .section.pults .container .blocks .block.main .main-1 {
+          opacity: 0.9;
+          text-transform: uppercase;
+          font-size: 35.1px;
+          line-height: 50.71px; }
+        .section.pults .container .blocks .block.main .main-2 {
           color: #b9d3f5;
-          font-weight: 300; }
+          opacity: 0.8;
+          font-size: 16px;
+          line-height: 26px;
+          margin-top: 20px; }
+      .section.pults .container .blocks .block.parts {
+        margin-left: 5%;
+        margin-top: 4%;
+        font-family: "f_helvetica", "Helvetica", sans-serif;
+        font-size: 16px;
+        line-height: 30px; }
+        .section.pults .container .blocks .block.parts td {
+          padding: 1% 2%; }
+          .section.pults .container .blocks .block.parts td .caption {
+            color: #52b7f7;
+            font-weight: 600; }
+          .section.pults .container .blocks .block.parts td p {
+            opacity: 0.6;
+            color: #b9d3f5;
+            font-weight: 300; }
     .section.pults .container .block.cleaner {
       position: absolute;
       right: 15%;
@@ -1195,14 +1198,14 @@ p {
         display: inline-block;
         margin: 10px; }
         .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext {
-          padding: 46px;
+          padding: 5vh;
           border-radius: 1000px;
           border: 3px #707b8b solid; }
           .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int {
             overflow: hidden;
             position: relative;
-            width: 460px;
-            height: 460px;
+            width: 55vh;
+            height: 55vh;
             border-radius: 1000px;
             border: 3px #707b8b solid; }
             .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic {
@@ -1676,41 +1679,44 @@ p {
   min-height: 100vh;
   width: 100%; }
   .section.pults .container {
-    height: 100vh;
-    width: 100%;
-    padding-top: 5%;
-    color: white;
-    text-align: left; }
-    .section.pults .container .block.main {
-      width: 690px;
-      font-family: "f_helvetica", "Helvetica", sans-serif;
-      font-weight: 300; }
-      .section.pults .container .block.main .main-1 {
-        opacity: 0.9;
-        text-transform: uppercase;
-        font-size: 35.1px;
-        line-height: 50.71px; }
-      .section.pults .container .block.main .main-2 {
-        color: #b9d3f5;
-        opacity: 0.8;
-        font-size: 16px;
-        line-height: 26px;
-        margin-top: 20px; }
-    .section.pults .container .block.parts {
-      margin-left: 5%;
-      margin-top: 4%;
-      font-family: "f_helvetica", "Helvetica", sans-serif;
-      font-size: 16px;
-      line-height: 30px; }
-      .section.pults .container .block.parts td {
-        padding: 10px; }
-        .section.pults .container .block.parts td .caption {
-          color: #52b7f7;
-          font-weight: 600; }
-        .section.pults .container .block.parts td p {
-          opacity: 0.6;
+    display: table;
+    height: 100vh; }
+    .section.pults .container .blocks {
+      display: table-cell;
+      vertical-align: middle; }
+      .section.pults .container .blocks .block {
+        color: white;
+        text-align: left; }
+      .section.pults .container .blocks .block.main {
+        width: 700px;
+        font-family: "f_helvetica", "Helvetica", sans-serif;
+        font-weight: 300; }
+        .section.pults .container .blocks .block.main .main-1 {
+          opacity: 0.9;
+          text-transform: uppercase;
+          font-size: 35.1px;
+          line-height: 50.71px; }
+        .section.pults .container .blocks .block.main .main-2 {
           color: #b9d3f5;
-          font-weight: 300; }
+          opacity: 0.8;
+          font-size: 16px;
+          line-height: 26px;
+          margin-top: 20px; }
+      .section.pults .container .blocks .block.parts {
+        margin-left: 5%;
+        margin-top: 4%;
+        font-family: "f_helvetica", "Helvetica", sans-serif;
+        font-size: 16px;
+        line-height: 30px; }
+        .section.pults .container .blocks .block.parts td {
+          padding: 1% 2%; }
+          .section.pults .container .blocks .block.parts td .caption {
+            color: #52b7f7;
+            font-weight: 600; }
+          .section.pults .container .blocks .block.parts td p {
+            opacity: 0.6;
+            color: #b9d3f5;
+            font-weight: 300; }
     .section.pults .container .block.cleaner {
       position: absolute;
       right: 15%;
@@ -1809,14 +1815,14 @@ p {
         display: inline-block;
         margin: 10px; }
         .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext {
-          padding: 46px;
+          padding: 5vh;
           border-radius: 1000px;
           border: 3px #707b8b solid; }
           .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int {
             overflow: hidden;
             position: relative;
-            width: 460px;
-            height: 460px;
+            width: 55vh;
+            height: 55vh;
             border-radius: 1000px;
             border: 3px #707b8b solid; }
             .section.slideshow .container .block.show .slider.tech-pics .item .circle-ext .circle-int .pic {
@@ -1853,7 +1859,7 @@ p {
     .section.start .container .logo {
       position: absolute;
       top: 3%;
-      left: 6%; }
+      left: 4%; }
     .section.start .container .lang {
       position: absolute;
       top: 3%;
