--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1059,6 +1059,24 @@ strong {
         width: 140px;
         height: 300px;
         background-image: url("../pics/section.main_car_animation.cleaner.png"); }
+      .section.main_car_animation .container .content-container .round {
+        position: absolute;
+        height: 10px;
+        width: 10px;
+        background-color: white;
+        border: 3px solid #ff1300;
+        border-radius: 100px;
+        display: none; }
+      .section.main_car_animation .container .content-container .round-1 {
+        right: 145px;
+        bottom: 250px;
+        display: block; }
+      .section.main_car_animation .container .content-container .round-2 {
+        right: 145px;
+        bottom: 240px; }
+      .section.main_car_animation .container .content-container .round-3 {
+        right: 145px;
+        bottom: 230px; }
       .section.main_car_animation .container .content-container .car-shadow {
         bottom: 0;
         left: 45px;
@@ -1707,6 +1725,24 @@ strong {
         width: 140px;
         height: 300px;
         background-image: url("../pics/section.main_car_animation.cleaner.png"); }
+      .section.main_car_animation .container .content-container .round {
+        position: absolute;
+        height: 10px;
+        width: 10px;
+        background-color: white;
+        border: 3px solid #ff1300;
+        border-radius: 100px;
+        display: none; }
+      .section.main_car_animation .container .content-container .round-1 {
+        right: 145px;
+        bottom: 250px;
+        display: block; }
+      .section.main_car_animation .container .content-container .round-2 {
+        right: 145px;
+        bottom: 240px; }
+      .section.main_car_animation .container .content-container .round-3 {
+        right: 145px;
+        bottom: 230px; }
       .section.main_car_animation .container .content-container .car-shadow {
         bottom: 0;
         left: 45px;
